--- a/hindex.html
+++ b/hindex.html
@@ -21,7 +21,8 @@
         </div>
         <div id="page2">
             <div id="elem1" class="elem">
-                <img data-scroll data-scroll-speed="1" src="https://cdn.sanity.io/images/w8f1ak3c/production/3639fc290272fe62d269e8750eff907b2664fc77-3000x5000.png/1.png?rect=1,0,2999,5000&w=1024&h=1707&auto=format" alt="">
+                <img  src="https://cdn.sanity.io/images/w8f1ak3c/production/3639fc290272fe62d269e8750eff907b2664fc77-3000x5000.png/1.png?rect=1,0,2999,5000&w=1024&h=1707&auto=format" alt="">
+                
             </div>
             <div id="elem2" class="elem">
                 <img src="https://cdn.sanity.io/images/w8f1ak3c/production/9b0a45cc68406b9288b970064c64511ce937d911-5000x5000.png/Website%20Products%20-%20Alemais%202024.png?rect=1001,0,2999,5000&w=1024&h=1707&fit=min&auto=format" alt="">
