--- a/hindex.html
+++ b/hindex.html
@@ -90,30 +90,45 @@
             <h1>Change</h1>
             <h1>the course</h1>
             <div id="video-container">
-                <div id="play">PLAY</div>
-                <video autoplay loop muted src="./video.mp4"></video>
+                
+                <img data-scroll data-scroll-speed="0.5" src="main.avif" alt="" srcset="">
             </div>
         </div>
         <div id="page2">
             <div id="elem1" class="elem">
                 <img data-scroll data-scroll-speed="1"
-                    src="https://cdn.sanity.io/images/w8f1ak3c/production/ee1c2e8894a4c47c4f4ce71b8973589f8a5045b2-902x1500.png/Rectangle%203.png?rect=1,0,900,1500&w=640&h=1067&fit=min&auto=format"
+                    src="con1.avif"
                     alt="">
-                <div data-scroll data-scroll-speed="-2" class="dets"></div>
+                <div data-scroll data-scroll-speed="-2" class="dets">
+                    <div class="dot same"><i class="ri-stop-circle-fill"></i></div>
+                    <div class="shop same">Shop</div>
+                    <div class="gift same">GIFT FOR GOODS</div>
+                    <div class="arrow same"><i class="ri-arrow-right-s-fill"></i></div>
+                </div>
 
             </div>
             <div id="elem2" class="elem">
                 <img data-scroll data-scroll-speed="1"
-                    src="https://cdn.sanity.io/images/w8f1ak3c/production/bb84b7106e978c37f5aa92c8d5781751b2e9d9f2-900x1500.png/Rectangle%202.png?w=640&h=1067&auto=format"
+                    src="con2.avif"
                     alt="">
-                <div data-scroll data-scroll-speed="-2" class="dets"></div>
+                <div data-scroll data-scroll-speed="-2" class="dets">
+                    <div class="dot same"><i class="ri-stop-circle-fill"></i></div>
+                    <div class="shop same">Shop</div>
+                    <div class="gift same">GIFT FOR GOODS</div>
+                    <div class="arrow same"><i class="ri-arrow-right-s-fill"></i></div>
+                </div>
 
             </div>
             <div id="elem3" class="elem">
                 <img data-scroll data-scroll-speed="1"
-                    src="https://cdn.sanity.io/images/w8f1ak3c/production/d3151106849ff2494d66916cf554c68a0603444d-902x1500.png/Rectangle%20220.png?rect=1,0,900,1500&w=640&h=1067&fit=min&auto=format"
-                    alt="">
-                <div data-scroll data-scroll-speed="-2" class="dets"></div>
+                    src="con3.avif"
+                    alt="not load">
+                <div data-scroll data-scroll-speed="-2" class="dets">
+                    <div class="dot same"><i class="ri-stop-circle-fill"></i></div>
+                    <div class="shop same">Shop</div>
+                    <div class="gift same">GIFT FOR GOODS</div>
+                    <div class="arrow same"><i class="ri-arrow-right-s-fill"></i></div>
+                </div>
             </div>
 
         </div>
